--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Merhaba 2024</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Seo acisindan onemli -->
+    <meta name="description" content="Dunyanin en iyi kalemleri cw-kalem" />
+    <!-- Title'in yanindaki logo icin favicon kullanilir -->
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+    <!-- HTML kodunuz stillendirme dosyasi ile baglantisi-->
+    <link rel="stylesheet" href="stil.css" />
+
+    <style>
+      .par {
+        /* internal CSS */
+        color: white;
+        background-color: red;
+      }
+      #container {
+        border: 2px solid yellowgreen;
+      }
+    </style>
+    <title>Recap</title>
+  </head>
+  <body>
+    <h1>Bu bir H1 etiketidir</h1>
+    <h2>Bu bir H1 etiketidir</h2>
+    <h3>Bu bir H1 etiketidir</h3>
+    <h4>Bu bir H1 etiketidir</h4>
+    <h5>Bu bir H1 etiketidir</h5>
+    <h6>Bu bir H1 etiketidir</h6>
+
+    <div id="container">
+      <p class="par">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, aut
+        exercitationem eos vel nulla magnam cum, sunt minima incidunt itaque
+        totam. Veritatis ullam id molestiae consequuntur nesciunt ipsam nostrum
+        non!
+      </p>
+
+      <!-- Inline CSS -->
+      <p style="color: blueviolet; background-color: beige">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+        laudantium totam quam voluptatibus saepe sint minus dicta vitae optio?
+        Atque!
+      </p>
+
+      <p class="par">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi
+        laborum deleniti ipsam quia!
+      </p>
+    </div>
+    <section>
+      <b>Lorem</b> <strong>ipsum</strong> <u>dolor</u> <em>sit</em>
+      <ins>amet</ins> <mark> consectetur </mark>
+      <del>adipisicing</del>
+
+      elit. Illo modi amet assumenda molestiae perspiciatis itaque eum
+      recusandae velit nulla rerum libero veniam, rem repellendus est laudantium
+      blanditiis! Obcaecati, doloribus fuga?
+
+      <br />
+      <article>Bu urunun fiyati <span style="color: red">500 TL</span></article>
+    </section>
+
+    <p>Suyun formulu H<sub>2</sub>0</p>
+    <p>Formul x<sup>2</sup>+ 3</p>
+
+  </body>
 </html>
