--- a/links.html
+++ b/links.html
@@ -6,11 +6,80 @@
     <title>Links</title>
   </head>
   <body>
-    <h1>LINKS</h1>
+    <h1 id="baslangic">LINKS</h1>
 
     <a href="https://clarusway.com" target="_blank">Clarusway Web Site</a>
+
     <p>
       <a href="index.html">Birinci Calisma</a>
     </p>
+
+    <a href="https://clarusway.com">
+      <img
+        src="https://cdn.pixabay.com/photo/2023/08/25/10/33/apples-8212695_640.jpg"
+        alt="apple"
+        width="300px"
+      />
+    </a>
+
+    <div>
+      <img src="./img/autumn.webp" alt="autumn" width="300px" />
+    </div>
+
+    <a href="./img/autumn.webp" download="">Resmi indirmek icin tiklayiniz</a>
+    <p>
+      <a href="tel:+90555555">Ara 905555555</a>
+    </p>
+    <p><a href="mailto:noah@cw.com">Mail icin tiklayiniz</a></p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis
+      accusamus veniam pariatur, quaerat animi quasi assumenda sunt itaque
+      aliquid. Omnis, at. Adipisci autem velit maxime earum voluptas nostrum
+      amet asperiores quas, ea placeat vel similique natus reprehenderit odit
+      molestiae, tenetur iste quibusdam, dolores ullam exercitationem esse
+      eligendi ducimus vitae dolorum. Tempora ab vero et laborum? Facilis, animi
+      esse! Eum illum perspiciatis optio repellat numquam obcaecati veniam
+      accusamus magnam, cum eveniet voluptates quam sed quibusdam. Officiis
+      alias dolorum voluptatibus, quo ipsum sed hic nesciunt beatae itaque
+      minima, sit modi! Dignissimos cupiditate ipsam sunt vero explicabo numquam
+      commodi a! Consequuntur labore magnam reiciendis corporis. Quidem quos
+      blanditiis maxime harum tempore explicabo repudiandae voluptatum modi
+      inventore incidunt, quas at illo dolore eum debitis unde, dignissimos
+      eaque provident! Consequuntur quibusdam modi dignissimos explicabo,
+      tempore alias quasi fugit ipsa impedit vero, dolorem tempora magnam
+      perferendis id recusandae dolores aliquid. Consequuntur cupiditate quod
+      nobis. Distinctio ducimus veniam ipsam, impedit temporibus quidem aut
+      dolor iure esse necessitatibus nesciunt? Voluptates officia quisquam hic
+      a? Dolorem perferendis inventore facilis maiores atque delectus soluta
+      nostrum laborum quibusdam reiciendis quasi omnis hic voluptatem at sed,
+      molestias reprehenderit neque quae necessitatibus voluptatum. Modi culpa
+      necessitatibus sunt in eaque provident ducimus soluta.
+    </p>
+    <br />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius et,
+      voluptatem, reprehenderit voluptate veritatis minus provident optio facere
+      fuga aliquid odit quia ratione reiciendis praesentium in quis aperiam
+      natus, cupiditate voluptates tempora nisi facilis veniam harum similique!
+      Soluta nostrum cupiditate ea modi qui facilis consequatur optio
+      necessitatibus hic excepturi distinctio ipsum est, incidunt consectetur
+      iusto quia architecto cumque sequi veniam quibusdam tempora! Natus vero
+      tempore accusamus earum recusandae? Esse expedita maxime at a amet nobis
+      praesentium nisi officia facere ipsa quas quod nemo deserunt quibusdam,
+      tenetur fugit suscipit. Odit illo consectetur quod. Quasi debitis fugit
+      vitae cupiditate eius! Asperiores quod eius, neque aperiam possimus, at in
+      quaerat deserunt nobis tempora quas dicta laboriosam debitis repellat
+      perspiciatis aut rem dolore. Praesentium, asperiores ut. Atque modi libero
+      aut doloribus odio, nemo nostrum sequi deleniti quae. In, minima possimus!
+      Porro, ipsum dolorem? Sint quos placeat dolorem distinctio voluptatem
+      aliquid deleniti doloremque, impedit odit aliquam totam a quod illo earum
+      doloribus quae numquam temporibus officia culpa. Quaerat at optio sint
+      quasi iusto molestias eius assumenda voluptas tempora delectus rem, hic
+      perferendis laboriosam quis reprehenderit asperiores doloremque enim
+      perspiciatis odio. Consequatur dolorum eos alias unde reprehenderit vero
+      soluta. Optio excepturi veritatis molestias nesciunt vel fugiat.
+    </p>
+    <a href="#baslangic">Basa Git</a>
   </body>
 </html>
